Add AdSense verification code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>HighHill 公式サイト</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- ✅ AdSense認証用コード -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2633677337208621" crossorigin="anonymous"></script>
+
     <style>
         body {
             font-family: sans-serif;
@@ -44,4 +48,3 @@
     <p style="margin-top: 50px; font-size: 0.9rem; color: #aaa;">© 2025 HighHill Inc.</p>
 </body>
 </html>
-
