Update index.html with AdSense verification and privacy policy

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>HighHill 公式サイト</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- ✅ AdSense認証用コード -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2633677337208621" crossorigin="anonymous"></script>
+    <!-- AdSense コード -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2633677337208621"
+        crossorigin="anonymous"></script>
 
     <style>
         body {
@@ -36,6 +37,11 @@
         a:hover {
             background-color: #0056b3;
         }
+        footer {
+            margin-top: 50px;
+            font-size: 0.9rem;
+            color: #aaa;
+        }
     </style>
 </head>
 <body>
@@ -45,6 +51,17 @@
 
     <a href="https://hitokoto-bot.highhill.net/">ひとことBotはこちら</a>
 
-    <p style="margin-top: 50px; font-size: 0.9rem; color: #aaa;">© 2025 HighHill Inc.</p>
+    <h2 style="margin-top: 50px;">プライバシーポリシー</h2>
+    <p>当サイトではGoogle AdSenseを利用して広告を掲載しています。<br>
+    Googleおよびパートナーは、Cookie等を使用して広告を配信することがあります。<br>
+    詳細はGoogleの<a href="https://policies.google.com/technologies/ads?hl=ja" target="_blank">広告ポリシー</a>をご確認ください。</p>
+
+    <h2>お問い合わせ</h2>
+    <p>ご連絡は以下までお願いいたします。<br>
+    <a href="mailto:info@highhill.net">info@highhill.net</a></p>
+
+    <footer>
+        © 2025 HighHill Inc. All Rights Reserved.
+    </footer>
 </body>
 </html>
