--- a/index.html
+++ b/index.html
@@ -4,28 +4,24 @@
     <meta charset="UTF-8">
     <title>HighHill 公式サイト</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- AdSense コード -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2633677337208621"
-        crossorigin="anonymous"></script>
-
     <style>
         body {
             font-family: sans-serif;
             background-color: #f5f5f5;
             text-align: center;
             padding: 40px 20px;
+            color: #333;
         }
         h1 {
             font-size: 2rem;
             margin-bottom: 20px;
         }
-        p {
-            font-size: 1rem;
+        .subtext {
+            font-size: 1.1rem;
             margin-bottom: 30px;
             color: #555;
         }
-        a {
+        a.button {
             display: inline-block;
             padding: 10px 20px;
             background-color: #007bff;
@@ -33,35 +29,43 @@
             border-radius: 5px;
             text-decoration: none;
             font-size: 1rem;
+            margin-bottom: 50px;
         }
-        a:hover {
+        a.button:hover {
             background-color: #0056b3;
+        }
+        .info-section {
+            font-size: 0.9rem;
+            color: #666;
+            margin-top: 50px;
+        }
+        .info-section h4 {
+            margin-bottom: 10px;
+            font-weight: normal;
+            color: #444;
         }
         footer {
             margin-top: 50px;
-            font-size: 0.9rem;
+            font-size: 0.8rem;
             color: #aaa;
         }
     </style>
 </head>
 <body>
     <h1>HighHillへようこそ</h1>
-    <p>現在、一部サービスを順次公開中です。<br>
-    第一弾サービス：ひとことBot</p>
+    <p class="subtext">現在、一部サービスを順次公開中です。<br>第一弾サービス：ひとことBot</p>
+    <a href="https://hitokoto-bot.highhill.net/" class="button">ひとことBotはこちら</a>
 
-    <a href="https://hitokoto-bot.highhill.net/">ひとことBotはこちら</a>
+    <div class="info-section">
+        <h4>プライバシーポリシー</h4>
+        <p>当サイトではGoogle AdSenseを利用して広告を掲載しています。<br>
+        Googleおよびパートナーは、Cookie等を使用して広告を配信することがあります。<br>
+        詳細はGoogleの<a href="https://policies.google.com/technologies/ads?hl=ja" target="_blank">広告ポリシー</a>をご確認ください。</p>
 
-    <h2 style="margin-top: 50px;">プライバシーポリシー</h2>
-    <p>当サイトではGoogle AdSenseを利用して広告を掲載しています。<br>
-    Googleおよびパートナーは、Cookie等を使用して広告を配信することがあります。<br>
-    詳細はGoogleの<a href="https://policies.google.com/technologies/ads?hl=ja" target="_blank">広告ポリシー</a>をご確認ください。</p>
+        <h4>お問い合わせ</h4>
+        <p>ご連絡は <a href="mailto:info@highhill.net">info@highhill.net</a> までお願いいたします。</p>
+    </div>
 
-    <h2>お問い合わせ</h2>
-    <p>ご連絡は以下までお願いいたします。<br>
-    <a href="mailto:info@highhill.net">info@highhill.net</a></p>
-
-    <footer>
-        © 2025 HighHill Inc. All Rights Reserved.
-    </footer>
+    <footer>© 2025 HighHill Inc. All Rights Reserved.</footer>
 </body>
 </html>
