--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>HighHill 公式サイト</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- ✅ AdSenseサイト認証 -->
+    <meta name="google-adsense-account" content="ca-pub-263367733208621" />
+    <!-- ✅ AdSense広告タグ -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-263367733208621" crossorigin="anonymous"></script>
     <style>
         body {
