fix: move AdSense script to head

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <title>HighHill 公式サイト</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- ✅ AdSenseサイト認証 -->
+    
+    <!-- ✅ AdSenseサイト認証（所有権確認用スクリプト） -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-263367733208621" crossorigin="anonymous"></script>
+
+    <!-- ✅ メタタグ（サブ的にOK） -->
     <meta name="google-adsense-account" content="ca-pub-263367733208621" />
+
     <style>
         body {
             font-family: sans-serif;
@@ -91,17 +96,13 @@
         <p>ご連絡は <a href="mailto:info@highhill.net">info@highhill.net</a> までお願いいたします。</p>
     </div>
 
-    <!-- 🔽 フッターリンク追加ここから -->
+    <!-- 🔽 フッターリンク -->
     <div class="footer-links">
         <a href="/privacy">プライバシーポリシー</a> |
         <a href="/about">開発者について</a> |
         <a href="/howto">使い方ガイド</a>
     </div>
-    <!-- 🔼 フッターリンク追加ここまで -->
 
     <footer>© 2025 HighHill Inc. All Rights Reserved.</footer>
-
-    <!-- ✅ AdSense JavaScript -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-263367733208621" crossorigin="anonymous"></script>
 </body>
 </html>
